@@ -222,4 +222,11 @@ Poco::Dynamic::Array Array::makeArray(const JSON::Array::Ptr& arr)
 }
 
 
+void Array::clear()
+{
+	_values.clear();
+	_pArray = 0;
+}
+
+
 } } // namespace Poco::JSON
