@@ -76,6 +76,7 @@ Release 1.5.2 (2013-06-xx)
 - fixed GH #185: Poco::NumberFormatter::format(double value, int precision) 
   ignore precision == 0
 - fixed GH #138: FreeBSD JSON tests fail
+- fixed GH #99: JSON::Query an JSON::Object
 
 
 Release 1.5.1 (2013-01-11)
